src/syntax_analysis/expressions/function_expression/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__function_expression__tests__test_syntax_analysis_for_function_expression_case3.snap
---
source: src/syntax_analysis/expressions/function_expression/tests.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "FUNCTION": {
            "parameters": [
              {
                "IDENTIFIER": {
                  "identifier_token": {
                    "IDENTIFIER": {
                      "literal": "x"
                    }
                  }
                }
              }
            ],
            "block": {
              "BLOCK": {
                "blocks": []
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
